validation, update controllers
