# controllers/cat.controller.js
@@ -52,3 +52,18 @@ exports.getCategoryById = async (req, res) => {
         res.status(500).json({ message: 'An error occurred while fetching category information' })    
     } 
     }  
+
+exports.updateCategory = async (req, res) => {
+    const { id } = req.params    
+    const { catname } = req.body    
+    try {     
+        const category = await Category.findByPk(id)      
+        if (!category) {       
+            return res.status(404).json({ message: 'Movie category not found' })      
+        }     await category.update({ catname })      
+        res.status(200).json(category)    
+    } catch (error) {     
+        console.error(error)      
+        res.status(500).json({ message: 'An error occurred while updating movie category' })    
+    } 
+}
